<resources>
    <string name="app_name">Clothing Store</string>

    <string name="cart">Корзина</string>
    <string name="add_in_cart">Добавить в корзину</string>
    <string name="total_price">Общая сумма: %d</string>
    <string name="place_order">Оформить заказ</string>
    <string name="color">Цвет</string>
    <string name="size">Размер</string>
    <string name="manufacturer">Производитель</string>
    <string name="description">Описание</string>
    <string name="material">Материал</string>
    <string name="error_download">Ошибка загрузки:</string>
    <string name="download_now">Попробовать еще раз</string>
    <string name="count">Количество - %d</string>
    <string name="price">Цена - %d</string>

    <string name="error_no_get_message">Нет сети. Проверьте соединение и попробуйте снова.</string>
    <string name="error_get_message">Упс! Что-то пошло не так.</string>
</resources>
